# asteroidb

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.scale.yml  docker-compose.yml  slides.typ
.claude/: settings.json  settings.local.json
.github/workflows/: benchmark.yml  ci.yml  netem.yml
benches/: certified_bench.rs  compaction_bench.rs  crdt_bench.rs  signature_bench.rs  store_bench.rs  sync_bench.rs  sync_benchmark.rs
configs/: node-1.json  node-2.json  node-3.json
configs/scale/: node-1.json  node-2.json  node-3.json  node-4.json  node-5.json  node-6.json  node-7.json
demo/fishing/: index.html
docs/: agent.md  api-reference.md  architecture.md  benchmark.md  endurance-test-results.md  getting-started.md  high-latency-results.md  legal-clearance.md  long-partition-results.md  missing-features-for-production.md  netem-testing.md  ops-guide.md  overhead-analysis.md  profiling-results.md  requirements.md  satellite-scenario-results.md  user-guide.md  vision.md  wasm-compat.md
docs/runbook/: disaster-recovery.md  key-rotation.md  node-operations.md  troubleshooting.md
example/sample-app-dashboard/: README.md  next.config.ts  package-lock.json  package.json
example/sample-app-dashboard/src/app/: globals.css  layout.tsx  page.tsx
example/sample-app-dashboard/src/app/certified/: page.tsx
example/sample-app-dashboard/src/app/cluster/: page.tsx
example/sample-app-dashboard/src/app/telemetry/: page.tsx
example/sample-app-dashboard/src/components/: card.tsx  counter-panel.tsx  map-panel.tsx  proof-viewer.tsx  register-panel.tsx  set-panel.tsx  sidebar.tsx  status-badge.tsx
example/sample-app-dashboard/src/lib/: asteroidb.ts
examples/: benchmark.rs  demo_partition_recovery.rs  fishing_demo.rs
examples/sample-app-rust/: Cargo.toml  README.md  Trunk.toml
examples/sample-app-rust/frontend/: Cargo.toml  index.html
examples/sample-app-rust/frontend/src/: api.rs  app.rs  lib.rs  state.rs
examples/sample-app-rust/frontend/src/components/: board.rs  cert_badge.rs  column.rs  dashboard.rs  metrics_panel.rs  mod.rs  proof_viewer.rs  slo_panel.rs  tag_editor.rs  task_card.rs  task_form.rs  topology_map.rs  vote_button.rs
examples/sample-app-rust/frontend/style/: main.css
examples/sample-app-rust/src/: config.rs  error.rs  handlers.rs  main.rs  proxy.rs  routes.rs
examples/sample-app-rust/src/shared/: types.rs
examples/wasm/: Cargo.toml  README.md  index.html  test-node.js
examples/wasm/src/: lib.rs
models/: authority_consensus.md
scripts/: bench-compare.sh  bench-multinode.sh  bench-partition-recovery.sh  check-doc-drift.sh  cluster-down.sh  cluster-status.sh  cluster-up.sh  demo.sh  e2e-docker.sh  test-docker-replication.sh  test-endurance.sh  test-high-latency.sh  test-large-scale.sh  test-long-partition.sh  test-netem-light.sh  test-satellite-scenario.sh  test-split-brain.sh
scripts/fault-inject/: asymmetric-partition.sh  crash-node.sh  remove-asymmetric-partition.sh  runner.sh  scenario-asymmetric-partition.sh  scenario-crash-recovery.sh  scenario-jitter-latency.sh  scenario-node-rejoin.sh  scenario-rolling-partition.sh
scripts/netem/: add-delay.sh  add-partition.sh  lib.sh  remove-netem.sh  runner.sh  scenario-delay-convergence.sh  scenario-partition-recovery.sh  scenarios.json
src/: error.rs  hlc.rs  lib.rs  main.rs  node.rs  session.rs  types.rs
src/api/: certified.rs  eventual.rs  mod.rs  status.rs
src/authority/: ack_frontier.rs  attestation_pool.rs  bls.rs  bls_stub.rs  certificate.rs  equivocation.rs  frontier_reporter.rs  frontier_sig.rs  mod.rs  verifier.rs
src/compaction/: engine.rs  mod.rs  tuner.rs
src/control_plane/: consensus.rs  mod.rs  system_namespace.rs
src/control_plane/raft/: core.rs  driver.rs  mod.rs  node.rs  state_machine.rs  storage.rs  transport.rs  types.rs
src/crdt/: digest.rs  gc.rs  lww_register.rs  mod.rs  or_map.rs  or_set.rs  pn_counter.rs
src/http/: auth.rs  codec.rs  handlers.rs  mod.rs  routes.rs  types.rs
src/network/: frontier_sync.rs  membership.rs  mod.rs  peer.rs  raft_transport.rs  sync.rs
src/ops/: diagnostics.rs  metrics.rs  mod.rs  slo.rs
src/placement/: latency.rs  mod.rs  policy.rs  rebalance.rs  topology.rs
src/runtime/: mod.rs  node_runner.rs  persistence.rs
src/store/: backend.rs  digest.rs  kv.rs  migration.rs  mod.rs  wal.rs
tests/: anti_entropy_convergence.rs  authority_auto_reconfig.rs  authority_edge_cases.rs  bls_runtime_integration.rs  certification_worker.rs  cli_e2e.rs  compound_e2e.rs  crash_recovery.rs  crdt_properties.rs  delta_sync.rs  digest_sync.rs  e2e_multiprocess.rs  equivocation_e2e.rs  fault_injection.rs  http_server.rs  integration.rs  key_rotation_epoch.rs  latency_runtime.rs  membership_protocol.rs  node_join_leave.rs  partition_recovery_bench.rs  partition_tolerance.rs  policy_version_transition.rs  property_crdt.rs  property_quorum.rs  property_store.rs  race_conditions.rs  raft_control_plane.rs  session_guarantees.rs  signing_pipeline_e2e.rs  split_brain.rs  store_crdt_hlc.rs  wal_recovery.rs  wasm_storage.rs
tests/integration/: authority_certified_flow.rs  main.rs  placement_authority.rs  quorum_safety_regression.rs  replication_convergence.rs
