[package]
name = "asteroidb-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blst = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "asteroidb-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "sync_benchmark"
harness = false

[[bench]]
name = "crdt_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "certified_bench"
harness = false
