[package]
name = "asteroidb-sample-app"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:reqwest",
    "dep:tower-http",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:uuid",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server-only dependencies (gated behind "server" feature)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
