[package]
name = "asteroidb-wasm-example"
version = "0.1.0"
edition = "2024"
publish = false
description = "WASM sample application demonstrating AsteroidDB CRDT operations in browser and Node.js"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asteroidb-poc = { path = "../..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
